// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comments > comment 1`] = `
{
  "children": [],
  "name": "number",
  "value": 123,
}
`;

exports[`comments > comment block 1`] = `
{
  "children": [],
  "name": "number",
  "value": 123,
}
`;

exports[`expressions > arithmetics > add 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "+",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > arithmetics > decrement 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "prefixDecrement",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > arithmetics > divide 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "/",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > arithmetics > increment 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "prefixIncrement",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > arithmetics > modulo 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "%",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > arithmetics > multiply 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "*",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > arithmetics > negate 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "negate",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > arithmetics > postfix decrement 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "postfixDecrement",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "postfix",
}
`;

exports[`expressions > arithmetics > postfix increment 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "postfixIncrement",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "postfix",
}
`;

exports[`expressions > arithmetics > power 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "^",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > arithmetics > produces correct tree for '(2^2-5+7)-(-i)+ (j)/0 - 1*(1*f)+(27-x )/q + send(-(2+7)/A,j, i, 127.0 ) + 1/1' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "+",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "+",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "+",
            },
            {
              "children": [
                {
                  "children": [],
                  "name": "group",
                  "value": "-",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": "group",
                      "value": "+",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "group",
                          "value": "-",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "group",
                                  "value": "+",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "name": "group",
                                      "value": "-",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [],
                                          "name": "group",
                                          "value": "^",
                                        },
                                        {
                                          "children": [],
                                          "name": "number",
                                          "value": 2,
                                        },
                                        {
                                          "children": [],
                                          "name": "number",
                                          "value": 2,
                                        },
                                      ],
                                      "name": "infix",
                                    },
                                    {
                                      "children": [],
                                      "name": "number",
                                      "value": 5,
                                    },
                                  ],
                                  "name": "infix",
                                },
                                {
                                  "children": [],
                                  "name": "number",
                                  "value": 7,
                                },
                              ],
                              "name": "infix",
                            },
                          ],
                          "name": "group",
                          "value": "parens",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "group",
                                  "value": "negate",
                                },
                                {
                                  "children": [],
                                  "name": "name",
                                  "value": "i",
                                },
                              ],
                              "name": "prefix",
                            },
                          ],
                          "name": "group",
                          "value": "parens",
                        },
                      ],
                      "name": "infix",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "group",
                          "value": "/",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "name",
                              "value": "j",
                            },
                          ],
                          "name": "group",
                          "value": "parens",
                        },
                        {
                          "children": [],
                          "name": "number",
                          "value": 0,
                        },
                      ],
                      "name": "infix",
                    },
                  ],
                  "name": "infix",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": "group",
                      "value": "*",
                    },
                    {
                      "children": [],
                      "name": "number",
                      "value": 1,
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "group",
                              "value": "*",
                            },
                            {
                              "children": [],
                              "name": "number",
                              "value": 1,
                            },
                            {
                              "children": [],
                              "name": "name",
                              "value": "f",
                            },
                          ],
                          "name": "infix",
                        },
                      ],
                      "name": "group",
                      "value": "parens",
                    },
                  ],
                  "name": "infix",
                },
              ],
              "name": "infix",
            },
            {
              "children": [
                {
                  "children": [],
                  "name": "group",
                  "value": "/",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "group",
                          "value": "-",
                        },
                        {
                          "children": [],
                          "name": "number",
                          "value": 27,
                        },
                        {
                          "children": [],
                          "name": "name",
                          "value": "x",
                        },
                      ],
                      "name": "infix",
                    },
                  ],
                  "name": "group",
                  "value": "parens",
                },
                {
                  "children": [],
                  "name": "name",
                  "value": "q",
                },
              ],
              "name": "infix",
            },
          ],
          "name": "infix",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "application",
            },
            {
              "children": [],
              "name": "name",
              "value": "send",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "name": "group",
                      "value": ",",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "group",
                          "value": ",",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "name": "group",
                              "value": ",",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "group",
                                  "value": "/",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "name": "group",
                                      "value": "negate",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "name": "group",
                                              "value": "+",
                                            },
                                            {
                                              "children": [],
                                              "name": "number",
                                              "value": 2,
                                            },
                                            {
                                              "children": [],
                                              "name": "number",
                                              "value": 7,
                                            },
                                          ],
                                          "name": "infix",
                                        },
                                      ],
                                      "name": "group",
                                      "value": "parens",
                                    },
                                  ],
                                  "name": "prefix",
                                },
                                {
                                  "children": [],
                                  "name": "name",
                                  "value": "A",
                                },
                              ],
                              "name": "infix",
                            },
                            {
                              "children": [],
                              "name": "name",
                              "value": "j",
                            },
                          ],
                          "name": "infix",
                        },
                        {
                          "children": [],
                          "name": "name",
                          "value": "i",
                        },
                      ],
                      "name": "infix",
                    },
                    {
                      "children": [],
                      "name": "number",
                      "value": 127,
                    },
                  ],
                  "name": "infix",
                },
              ],
              "name": "group",
              "value": "parens",
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "/",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > arithmetics > produces correct tree for '++i' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "prefixIncrement",
    },
    {
      "children": [],
      "name": "name",
      "value": "i",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > arithmetics > produces correct tree for '-(a+b)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "negate",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "+",
            },
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > arithmetics > produces correct tree for '--i' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "prefixDecrement",
    },
    {
      "children": [],
      "name": "name",
      "value": "i",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > arithmetics > produces correct tree for '1 + 2^3 * 4' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "+",
    },
    {
      "children": [],
      "name": "number",
      "value": 1,
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "*",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "^",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "infix",
        },
        {
          "children": [],
          "name": "number",
          "value": 4,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > arithmetics > subtract 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "-",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > and 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "and",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > comparator < 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "<",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > comparator <= 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "<=",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > comparator > 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ">",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > comparator >= 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ">=",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > range < < 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "inRange_<_<",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > range < <= 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "inRange_<_<=",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > range <= < 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "inRange_<=_<",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > range <= <= 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "inRange_<=_<=",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > range > > 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "inRange_>_>",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > range > >= 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "inRange_>_>=",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > range >= > 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "inRange_>=_>",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > comparators > range >= >= 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "inRange_>=_>=",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > equal 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "==",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > in 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "in",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > is 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "is",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > not 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "not",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > boolean expressions > not equal 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "!=",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > boolean expressions > or 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "or",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > data structures > field access 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "access",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > data structures > list 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ",",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
        {
          "children": [],
          "name": "number",
          "value": 2,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "brackets",
}
`;

exports[`expressions > data structures > map 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "label",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "infix",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "label",
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "name": "number",
              "value": 4,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "map",
}
`;

exports[`expressions > data structures > produces correct tree for '(-(2+7)/A,j, i, 127.0 )' 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [
                {
                  "children": [],
                  "name": "group",
                  "value": ",",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": "group",
                      "value": "/",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "name": "group",
                          "value": "negate",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "name": "group",
                                  "value": "+",
                                },
                                {
                                  "children": [],
                                  "name": "number",
                                  "value": 2,
                                },
                                {
                                  "children": [],
                                  "name": "number",
                                  "value": 7,
                                },
                              ],
                              "name": "infix",
                            },
                          ],
                          "name": "group",
                          "value": "parens",
                        },
                      ],
                      "name": "prefix",
                    },
                    {
                      "children": [],
                      "name": "name",
                      "value": "A",
                    },
                  ],
                  "name": "infix",
                },
                {
                  "children": [],
                  "name": "name",
                  "value": "j",
                },
              ],
              "name": "infix",
            },
            {
              "children": [],
              "name": "name",
              "value": "i",
            },
          ],
          "name": "infix",
        },
        {
          "children": [],
          "name": "number",
          "value": 127,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > data structures > record 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ",",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "label",
            },
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "infix",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "label",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "record",
}
`;

exports[`expressions > data structures > set 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "placeholder",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ",",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
        {
          "children": [],
          "name": "number",
          "value": 2,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "set",
}
`;

exports[`expressions > data structures > tuple 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ",",
    },
    {
      "children": [],
      "name": "number",
      "value": 1,
    },
    {
      "children": [],
      "name": "number",
      "value": 2,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > data structures > unit 1`] = `
{
  "children": [],
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > fixity expressions > group 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 1,
    },
  ],
  "name": "group",
  "value": "parens",
}
`;

exports[`expressions > fixity expressions > infix 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "+",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > fixity expressions > mixfix 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "number",
          "value": 456,
        },
      ],
      "name": "group",
      "value": "inRange_<_<",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
    {
      "children": [],
      "name": "number",
      "value": 789,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > fixity expressions > name 1`] = `
{
  "children": [],
  "name": "name",
  "value": "name",
}
`;

exports[`expressions > fixity expressions > postfix 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "postfixDecrement",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "postfix",
}
`;

exports[`expressions > fixity expressions > prefix 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "+",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > function expressions > application > function call 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "application",
    },
    {
      "children": [],
      "name": "name",
      "value": "f",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > function call multiple args 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "application",
        },
        {
          "children": [],
          "name": "name",
          "value": "f",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "infix",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send 1 2)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "application",
            },
            {
              "children": [
                {
                  "children": [],
                  "name": "group",
                  "value": "application",
                },
                {
                  "children": [],
                  "name": "name",
                  "value": "send",
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 1,
                },
              ],
              "name": "infix",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send 1)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "application",
            },
            {
              "children": [],
              "name": "name",
              "value": "send",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for '(send)(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'a + send (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "+",
    },
    {
      "children": [],
      "name": "name",
      "value": "a",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "application",
        },
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "group",
                  "value": ",",
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 2,
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 3,
                },
              ],
              "name": "infix",
            },
          ],
          "name": "group",
          "value": "parens",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'a + send 1 + 2' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "+",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "+",
        },
        {
          "children": [],
          "name": "name",
          "value": "a",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "application",
            },
            {
              "children": [],
              "name": "name",
              "value": "send",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
    {
      "children": [],
      "name": "number",
      "value": 2,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send 1 (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "application",
        },
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "infix",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send 1 + 2' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "+",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "application",
        },
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "infix",
    },
    {
      "children": [],
      "name": "number",
      "value": 2,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send a (2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "application",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "application",
        },
        {
          "children": [],
          "name": "name",
          "value": "send",
        },
        {
          "children": [],
          "name": "name",
          "value": "a",
        },
      ],
      "name": "infix",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send((1+2), 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "send",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "name": "group",
                      "value": "+",
                    },
                    {
                      "children": [],
                      "name": "number",
                      "value": 1,
                    },
                    {
                      "children": [],
                      "name": "number",
                      "value": 2,
                    },
                  ],
                  "name": "infix",
                },
              ],
              "name": "group",
              "value": "parens",
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > function expressions > application > produces correct tree for 'send(2, 3)' 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "application",
    },
    {
      "children": [],
      "name": "name",
      "value": "send",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > function expressions > funciton multiple params 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "application",
            },
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "fn",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "+",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > function expressions > function 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "->",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > pattern matching > in function parameters 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "->",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "+",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > pattern matching > match 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ";",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "->",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "infix",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "->",
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "name": "number",
              "value": 4,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "match",
}
`;

exports[`expressions > pattern matching > match newline inside 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ";",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "->",
            },
            {
              "children": [],
              "name": "number",
              "value": 1,
            },
            {
              "children": [],
              "name": "number",
              "value": 2,
            },
          ],
          "name": "infix",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "->",
            },
            {
              "children": [],
              "name": "number",
              "value": 3,
            },
            {
              "children": [],
              "name": "number",
              "value": 4,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "match",
}
`;

exports[`expressions > pattern matching > with 'is' operator 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "is",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "name",
              "value": "a",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > pattern matching > with placeholder 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "is",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "placeholder",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
          ],
          "name": "infix",
        },
      ],
      "name": "group",
      "value": "parens",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > structured programming > block 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block pattern matching 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "=",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
            {
              "children": [],
              "name": "name",
              "value": "y",
            },
          ],
          "name": "infix",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": ",",
            },
            {
              "children": [],
              "name": "number",
              "value": 123,
            },
            {
              "children": [],
              "name": "number",
              "value": 456,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block variable assignment 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "=",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > block variable declaration 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ":=",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "group",
  "value": "braces",
}
`;

exports[`expressions > structured programming > expression-label 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "label",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "+",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
        {
          "children": [],
          "name": "number",
          "value": 456,
        },
      ],
      "name": "infix",
    },
    {
      "children": [],
      "name": "number",
      "value": 789,
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > structured programming > for loop 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "name": "group",
                  "value": ",",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "name": "group",
                      "value": ",",
                    },
                    {
                      "children": [],
                      "name": "number",
                      "value": 1,
                    },
                    {
                      "children": [],
                      "name": "number",
                      "value": 2,
                    },
                  ],
                  "name": "infix",
                },
                {
                  "children": [],
                  "name": "number",
                  "value": 3,
                },
              ],
              "name": "infix",
            },
          ],
          "name": "group",
          "value": "brackets",
        },
      ],
      "name": "group",
      "value": "for",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > if-then 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
      ],
      "name": "group",
      "value": "if",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > if-then newline 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
      ],
      "name": "group",
      "value": "if",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > if-then newline-else 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "group",
      "value": "ifElse",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > if-then newline-else newline 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "group",
      "value": "ifElse",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > if-then-else 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "group",
      "value": "ifElse",
    },
    {
      "children": [],
      "name": "number",
      "value": 456,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > return 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "->",
    },
    {
      "children": [],
      "name": "group",
      "value": "parens",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "return",
            },
            {
              "children": [],
              "name": "number",
              "value": 123,
            },
          ],
          "name": "prefix",
        },
      ],
      "name": "group",
      "value": "braces",
    },
  ],
  "name": "infix",
}
`;

exports[`expressions > structured programming > while loop 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
      ],
      "name": "group",
      "value": "while",
    },
    {
      "children": [],
      "name": "number",
      "value": 123,
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > while loop break 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
      ],
      "name": "group",
      "value": "while",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "break",
        },
        {
          "children": [],
          "name": "placeholder",
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > while loop break value 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
      ],
      "name": "group",
      "value": "while",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "break",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > while loop continue 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
      ],
      "name": "group",
      "value": "while",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "continue",
        },
        {
          "children": [],
          "name": "placeholder",
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > structured programming > while loop continue value 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "true",
        },
      ],
      "name": "group",
      "value": "while",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "continue",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "prefix",
}
`;

exports[`expressions > values > false 1`] = `
{
  "children": [],
  "name": "name",
  "value": "false",
}
`;

exports[`expressions > values > number 1`] = `
{
  "children": [],
  "name": "number",
  "value": 123,
}
`;

exports[`expressions > values > string 1`] = `
{
  "children": [],
  "name": "string",
  "value": "string",
}
`;

exports[`expressions > values > true 1`] = `
{
  "children": [],
  "name": "name",
  "value": "true",
}
`;

exports[`programs > c > export main 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "export",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "->",
        },
        {
          "children": [],
          "name": "name",
          "value": "args",
        },
        {
          "children": [
            {
              "children": [],
              "name": "placeholder",
            },
          ],
          "name": "group",
          "value": "braces",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > c > external 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "external",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > c > import 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
      ],
      "name": "group",
      "value": "import",
    },
    {
      "children": [],
      "name": "name",
      "value": "b",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > c > import with 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "name": "name",
          "value": "b",
        },
      ],
      "name": "group",
      "value": "importWith",
    },
    {
      "children": [],
      "name": "name",
      "value": "c",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > c > import with external 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "name": "name",
          "value": "b",
        },
      ],
      "name": "group",
      "value": "importWith",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "external",
        },
        {
          "children": [],
          "name": "name",
          "value": "c",
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > c > private declare 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ":=",
    },
    {
      "children": [],
      "name": "name",
      "value": "z",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "+",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "infix",
}
`;

exports[`programs > c > public declare 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "export",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ":=",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "+",
            },
            {
              "children": [],
              "name": "name",
              "value": "z",
            },
            {
              "children": [],
              "name": "number",
              "value": 123,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > module > export main 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "export",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "->",
        },
        {
          "children": [],
          "name": "name",
          "value": "args",
        },
        {
          "children": [
            {
              "children": [],
              "name": "placeholder",
            },
          ],
          "name": "group",
          "value": "braces",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > module > external 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "external",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > module > import 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
      ],
      "name": "group",
      "value": "import",
    },
    {
      "children": [],
      "name": "name",
      "value": "b",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > module > import with 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "name": "name",
          "value": "b",
        },
      ],
      "name": "group",
      "value": "importWith",
    },
    {
      "children": [],
      "name": "name",
      "value": "c",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > module > import with external 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "name": "name",
          "value": "b",
        },
      ],
      "name": "group",
      "value": "importWith",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "external",
        },
        {
          "children": [],
          "name": "name",
          "value": "c",
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > module > private declare 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ":=",
    },
    {
      "children": [],
      "name": "name",
      "value": "z",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "+",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
        {
          "children": [],
          "name": "number",
          "value": 1,
        },
      ],
      "name": "infix",
    },
  ],
  "name": "infix",
}
`;

exports[`programs > module > public declare 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "export",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ":=",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [
            {
              "children": [],
              "name": "group",
              "value": "+",
            },
            {
              "children": [],
              "name": "name",
              "value": "z",
            },
            {
              "children": [],
              "name": "number",
              "value": 123,
            },
          ],
          "name": "infix",
        },
      ],
      "name": "infix",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > script > export 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": "export",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > script > export as 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "group",
      "value": "exportAs",
    },
    {
      "children": [],
      "name": "name",
      "value": "y",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > script > use 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
      ],
      "name": "group",
      "value": "use",
    },
    {
      "children": [],
      "name": "name",
      "value": "b",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > script > use with 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "name": "string",
          "value": "a",
        },
        {
          "children": [],
          "name": "name",
          "value": "b",
        },
      ],
      "name": "group",
      "value": "useWith",
    },
    {
      "children": [],
      "name": "name",
      "value": "x",
    },
  ],
  "name": "prefix",
}
`;

exports[`programs > script > variable export 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ";",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ":=",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "infix",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": "export",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "infix",
}
`;

exports[`programs > script > variable export as 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ";",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ":=",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "infix",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "name",
              "value": "x",
            },
          ],
          "name": "group",
          "value": "exportAs",
        },
        {
          "children": [],
          "name": "name",
          "value": "y",
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "infix",
}
`;

exports[`programs > script > variable use 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ";",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ":=",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "infix",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "string",
              "value": "a",
            },
          ],
          "name": "group",
          "value": "use",
        },
        {
          "children": [],
          "name": "name",
          "value": "b",
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "infix",
}
`;

exports[`programs > script > variable use with 1`] = `
{
  "children": [
    {
      "children": [],
      "name": "group",
      "value": ";",
    },
    {
      "children": [
        {
          "children": [],
          "name": "group",
          "value": ":=",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
        {
          "children": [],
          "name": "number",
          "value": 123,
        },
      ],
      "name": "infix",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "string",
              "value": "a",
            },
            {
              "children": [],
              "name": "name",
              "value": "b",
            },
          ],
          "name": "group",
          "value": "useWith",
        },
        {
          "children": [],
          "name": "name",
          "value": "x",
        },
      ],
      "name": "prefix",
    },
  ],
  "name": "infix",
}
`;
